--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -43,7 +43,7 @@ fingerprintAlgorithm = "sha256"
   showBreadcrumbs = false
   showDraftLabel = true
   showEdit = false
-  # editURL = "https://github.com/hugovk/hugovk.github.io/"
+  # editURL = "https://github.com/hugovk/hugovk.dev/"
   editAppendPath = true
   showHeadingAnchors = true
   showPagination = true
