Update Bluesky links

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -20,7 +20,7 @@ title = "Hugo van Kemenade"
    links = [
      { github = "https://github.com/hugovk" },
      { mastodon = "https://mastodon.social/@hugovk" },
-     { bluesky = "https://bsky.app/profile/hugovk.bsky.social" },
+     { bluesky = "https://bsky.app/profile/hugovk.dev" },
      { linkedin = "https://www.linkedin.com/in/hugovk/" },
   #   { email = "mailto:hello@your_domain.com" },
   #   { link = "https://link-to-some-website.com/" },
