--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v5.0.0
     hooks:
       - id: check-added-large-files
+        args: [--maxkb=3000]
       - id: check-case-conflict
       - id: check-merge-conflict
       - id: check-toml
