--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,9 +2,10 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://jpanther.github.io/congo/docs/getting-started/
 
- baseURL = "https://hugovk.dev/"
+baseURL = "https://hugovk.dev/"
 defaultContentLanguage = "en"
 capitalizeListTitles = false
+timeout = "60s"
 
 enableRobotsTXT = true
 summaryLength = 0
